--- a/app/views/welcome/wellnesscoaching.html.erb
+++ b/app/views/welcome/wellnesscoaching.html.erb
@@ -1,33 +1,42 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <p>
-      What is a Wellness Coach?
-    </p>
-    <p>
-      Coaching is an emerging profession that began about 25 years ago,
-      first in executive leadership, followed by life coaching. Coaching for
-      health and wellness started about ten years ago and it has been shown to
-      be an effective approach to helping people make and sustain improvements in their lives.
-      The relationship between a coach and client offers a profound level of
-      support, guidance, and encouragement to making changes, without being judgmental.
-      Coaches help their clients become clearer on where they are, where they want to go, and how to get there.
-    </p>
-    <p>
-      Coaches provide instruction and mentoring to their clients, and
-      help them set goals, define an action plan, and navigate the path until
-      they reach their goals. Coaches facilitate learning and help clients put the
-      learning into action. Wellness coaches work with people who want to make changes
-      in their lives regarding eating, exercise and stress and generally work with
-      people without mental health issues. Coaches focus on the present and help the
-      client move towards the future. Coaches do not diagnose and may recommend that
-      clients seek a psychologist or therapist for treatment, if appropriate.
-      Kay Schlegel-Pratt became a certified wellness coach in 2009 through Wellcoaches
-      Corporation.
-    </p>
-  </body>
-</html> -->
+<head>
+  <meta charset="utf-8">
+  <%= stylesheet_link_tag "charges.css" %>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <%= javascript_include_tag "forms.js" %>
+  <title>Forms</title>
+</head>
+<body>
+
+  <div class="container text-center">
+    <a href="#" class="btn btn-responsive btn-green general-button">General Nutrition Registration Information</a>
+    <a href="#" class="btn btn-responsive btn-green pediatric-button">Pediatric Nutrition Registration Information</a>
+    <a href="#" class="btn btn-responsive btn-green teen-button">Teen Nutrition Registration Information</a>
+  </div>
+
+  <div class="general-images">
+    <p>Nutrition Registration Information General</p>
+    <img src="http://i.imgur.com/Z2mqVJm.jpg" class="general" frameborder="0"></iframe>
+    <img src="http://i.imgur.com/lM8G1yO.jpg" class="general" frameborder="0"></iframe>
+    <img src="http://i.imgur.com/NzozBMw.jpg" class="general" frameborder="0"></iframe>
+    <img src="http://i.imgur.com/rL5rN91.jpg" class="general" frameborder="0"></iframe>
+  </div>
+
+  <div class="pediatric-images">
+    <p>Nutrition Registration Information Pediatric</p>
+    <img src="http://i.imgur.com/bazL3tc.jpg" class="pediatric" frameborder="0"></iframe>
+    <img src="http://i.imgur.com/r6Zus1O.jpg" class="pediatric" frameborder="0"></iframe>
+    <img src="http://i.imgur.com/oKFbOFd.jpg" class="pediatric" frameborder="0"></iframe>
+  </div>
+
+  <div class="teen-images">
+    <p>Nutrition Registration Information Teen</p>
+    <img src="http://i.imgur.com/Vy6GvCJ.jpg" class="teen" frameborder="0"></iframe>
+    <img src="http://i.imgur.com/YSjVnov.jpg" class="teen" frameborder="0"></iframe>
+    <img src="http://i.imgur.com/PeNPxF5.jpg" class="teen" frameborder="0"></iframe>
+  </div>
+
+
+</body>
+</html>
