--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
           <li><a href="aboutus">About</a></li>
           <li><a href="services">Services</a></li>
           <li><a href="recommendations">Recommendations</a></li>
-          <li><a href="contactus">Directione</a></li>
-          <li><a href="nutritiontips">Tips and Recipes!</a></li>
+          <li><a href="contactus">Directions</a></li>
+          <li><a href="nutritiontips">Tips and Recipes</a></li>
+          <li><a href="wellnesscoaching">Forms</a></li>
         </ul>
       </nav>
     </header>
