--- a/app/assets/stylesheets/charges.css
+++ b/app/assets/stylesheets/charges.css
@@ -6,7 +6,14 @@
 }
 
 .btn-green {
-  background: #1ED760;
+  background: #dedda1;
+  border-radius: 10px;
+  color: black;
+}
+
+.btn-green:hover {
+  background-color: rgb(40, 28, 31);
+  color: white;
 }
 
 .btn-sm {
@@ -31,7 +38,16 @@
 }
 @media(max-width: 500px) {
   .btn-responsive {
-  width: 100%;
-  line-height: 1.5;
+    font-size: 14px;
+    margin-bottom:2em;
+    padding: 0px 0px 0px;
+    line-height: 0;
+  }
+  .btn {
+    padding: 1.5em;
+    color: black;
+    background-color: #dedda1;
+    display: inline-block;
+    border-radius: 5px;
   }
 }
