style changes and rubocop corrections

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -460,3 +460,4 @@ nav {
   }
 }
 //end map --------===================------------===============------------- end map
+//footer ---------------------------------------------------------------------------footer
