--- a/app/views/welcome/wellnesscoaching.html.erb
+++ b/app/views/welcome/wellnesscoaching.html.erb
@@ -10,13 +10,13 @@
 <body>
 
   <div class="container text-center">
-    <a href="#" class="btn btn-responsive btn-green general-button">General Nutrition Registration Information</a>
-    <a href="#" class="btn btn-responsive btn-green pediatric-button">Pediatric Nutrition Registration Information</a>
-    <a href="#" class="btn btn-responsive btn-green teen-button">Teen Nutrition Registration Information</a>
+    <a href="#" class="btn btn-responsive btn-green general-button">Nutrition Registration Information</a>
+    <a href="#" class="btn btn-responsive btn-green pediatric-button">Pediatric Registration Information</a>
+    <a href="#" class="btn btn-responsive btn-green teen-button">Teen Registration Information</a>
   </div>
 
   <div class="general-images">
-    <p>Nutrition Registration Information General</p>
+    <p>Nutrition Registration Information</p>
     <img src="http://i.imgur.com/Z2mqVJm.jpg" class="general" frameborder="0"></iframe>
     <img src="http://i.imgur.com/lM8G1yO.jpg" class="general" frameborder="0"></iframe>
     <img src="http://i.imgur.com/NzozBMw.jpg" class="general" frameborder="0"></iframe>
@@ -24,14 +24,14 @@
   </div>
 
   <div class="pediatric-images">
-    <p>Nutrition Registration Information Pediatric</p>
+    <p>Pediatric Nutrition Registration</p>
     <img src="http://i.imgur.com/bazL3tc.jpg" class="pediatric" frameborder="0"></iframe>
     <img src="http://i.imgur.com/r6Zus1O.jpg" class="pediatric" frameborder="0"></iframe>
     <img src="http://i.imgur.com/oKFbOFd.jpg" class="pediatric" frameborder="0"></iframe>
   </div>
 
   <div class="teen-images">
-    <p>Nutrition Registration Information Teen</p>
+    <p>Teen Nutrition Registration</p>
     <img src="http://i.imgur.com/Vy6GvCJ.jpg" class="teen" frameborder="0"></iframe>
     <img src="http://i.imgur.com/YSjVnov.jpg" class="teen" frameborder="0"></iframe>
     <img src="http://i.imgur.com/PeNPxF5.jpg" class="teen" frameborder="0"></iframe>
