--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
           <li><a href="contactus">Directions</a></li>
           <li><a href="nutritiontips">Tips and Recipes</a></li>
           <li><a href="wellnesscoaching">Forms</a></li>
+          <!-- <li><a href="#">New Client</a></li> -->
         </ul>
       </nav>
     </header>
